fix: suppress sun.misc.Unsafe deprecation warnings in Scala 3.3.x
  Add --sun-misc-unsafe-memory-access=allow JVM flag to suppress
  warnings from LazyVals$ using Unsafe.objectFieldOffset (Java 23+).